--- a/deploy/requirements-prod.txt
+++ b/deploy/requirements-prod.txt
@@ -1,20 +1,34 @@
 # Production requirements for Perfect Prompt API
-fastapi==0.100.0
-uvicorn[standard]==0.23.0
-pydantic==2.5.0
-spacy==3.7.0
-nltk==3.8.0
-transformers==4.21.0
-scikit-learn==1.3.0
-numpy==1.24.0
-pandas==2.0.0
-requests==2.31.0
-aiohttp==3.8.0
-loguru==0.7.0
+# Simplified to avoid compilation issues on Railway
 
-# Production extras
+# Core API framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+
+# NLP and ML (using pre-built wheels)
+spacy==3.7.2
+nltk==3.8.1
+scikit-learn==1.3.2
+numpy==1.24.4
+pandas==2.1.4
+
+# HTTP requests
+requests==2.31.0
+
+# Logging
+loguru==0.7.2
+
+# Environment variables
+python-dotenv==1.0.0
+
+# Production server
 gunicorn==21.2.0
-python-multipart==0.0.6
+
+# Authentication and security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
+python-multipart==0.0.6
+
+# Transformers (lighter version)
+transformers==4.35.2
