--- a/deploy/requirements-prod.txt
+++ b/deploy/requirements-prod.txt
@@ -13,7 +13,7 @@ scikit-learn==1.3.2
 numpy==1.24.4
 pandas==2.1.4
 transformers==4.36.0
-torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
+torch==2.1.0
 
 # HTTP requests
 requests==2.31.0
